# Tortoise-Git-Port

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  appveyor.yml
doc/: doc.build.include  doc.build.user.tmpl
ext/gitdll/: stdafx.h
src/Git/: CMakeLists.txt  GitAdminDir.cpp  GitAdminDir.h  GitFolderStatus.h  GitPatch.h  GitStatus.cpp  GitStatus.h  TGitPath.cpp  TGitPath.h
src/SshAskPass/: SshAskPass.vcxproj
src/TGitCache/: CacheInterface.h  CachedDirectory.cpp  CachedDirectory.h  DirectoryWatcher.cpp  FolderCrawler.cpp  FolderCrawler.h  GITStatusCache.cpp  GitStatusCache.h  ShellUpdater.cpp  TGITCache.cpp
src/TortoiseGitBlame/: TortoiseGitBlame.vcxproj  TortoiseGitBlame.vcxproj.filters
src/TortoiseGitSetup/: TortoiseGIT.wxs
src/TortoiseIDiff/: TortoiseIDiff.vcxproj  TortoiseIDiff.vcxproj.filters
src/TortoiseMerge/: TempFile.h  TortoiseMerge.vcxproj  TortoiseMerge.vcxproj.filters
src/TortoiseProc/: AboutDlg.cpp  AppUtils.cpp  CheckForUpdatesDlg.cpp  SyncDlg.cpp  TortoiseProc.cpp  TortoiseProc.vcxproj  TortoiseProc.vcxproj.filters
src/TortoiseShell/: IconOverlay.cpp  RemoteCacheLink.cpp  RemoteCacheLink.h  ShellCache.cpp  ShellCache.h  ShellExt.cpp  ShellExt.h  ShellExtClassFactory.h  TortoiseGIT.cpp  TortoiseShell.vcxproj  TortoiseShell.vcxproj.filters  register.registry  register_recover.registry  registerrelease.registry
src/TortoiseUDiff/: TortoiseUDiff.vcxproj  TortoiseUDiff.vcxproj.filters
src/Utils/: CrashReport.h  DPIAware.h  LangDll.cpp  LangDll.h  LinuxTypeWrapper.h  PathUtils.cpp  PathUtils.h  PathWatcher.h  UniqueQueue.h
(+15 files in other folders)
